force-app/main/default/objects/Expedition_Gear__c/Expedition_Gear__c.object-meta.xml
<CustomObject>
    <label>Expedition Gear</label>
    <pluralLabel>Expedition Gear</pluralLabel>
    <description>Junction object linking Expedition Bookings to Gear Items. Represents the specific gear allocated to a particular expedition, including the quantity rented.</description>
    <nameField>
        <label>Expedition Gear Name</label>
        <type>AutoNumber</type>
        <displayFormat>EG-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>