force-app/main/default/objects/Expedition_Gear__c/fields/Expedition_Booking__c.field-meta.xml
<CustomField>
    <fullName>Expedition_Booking__c</fullName>
    <label>Expedition Booking</label>
    <type>MasterDetail</type>
    <referenceTo>Expedition_Booking__c</referenceTo>
    <relationshipLabel>Expedition Gear</relationshipLabel>
    <relationshipName>Expedition_Gear</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <description>Master-detail relationship to the parent Expedition Booking. Deleting the booking will cascade-delete all associated gear line items.</description>
    <inlineHelpText>The expedition booking this gear allocation belongs to.</inlineHelpText>
</CustomField>