force-app/main/default/objects/Expedition_Gear__c/fields/Gear_Item__c.field-meta.xml
<CustomField>
    <fullName>Gear_Item__c</fullName>
    <label>Gear Item</label>
    <type>MasterDetail</type>
    <referenceTo>Gear_Item__c</referenceTo>
    <relationshipLabel>Expedition Gear Allocations</relationshipLabel>
    <relationshipName>Expedition_Gear_Allocations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <description>Master-detail relationship to the parent Gear Item. Links the specific equipment piece to the expedition booking.</description>
    <inlineHelpText>The specific gear item being allocated to this expedition.</inlineHelpText>
</CustomField>