force-app/main/default/objects/Expedition_Gear__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>1</defaultValue>
    <description>Number of units of this gear item allocated to the expedition booking.</description>
    <inlineHelpText>How many units of this gear item are being rented for this expedition. Defaults to 1.</inlineHelpText>
</CustomField>